--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,21 @@
         <meta charset="UTF-8">
         <base href="/">
         <title>Contract Law</title>
-        <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+
         <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+        <script src="https://www.youtube.com/iframe_api"></script>
+        <script src="assets/angular-youtube-embed/src/angular-youtube-embed.js"></script>
+<!--
+        <script src="assets/humanize-duration.js"></script>
+        <script src="assets/locales.js"></script>
+        <script src="assets/moment.js"></script>
+        <script src="assets/angular-timer.js"></script>
+-->
+        <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
         <script src="js/app.js"></script>
+
     </head>
 
     <body ng-app="lawGame" ng-cloak>
